<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.JobsPhotosActivity">

    <include layout="@layout/lyt_toolbar"/>


    <ImageView
        android:id="@+id/jobsPhotoIVId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_star_rate"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/LinearLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/previousJobsPhotoIVId"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/edit"
            android:focusable="true"
            android:src="@drawable/ic_baseline_previous"
            android:visibility="visible" />

        <Button
            android:id="@+id/middleJobsButtonId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/nextJobsPhotoIVId"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/updated_play"
            android:focusable="true"
            android:src="@drawable/ic_baseline_next"
            android:visibility="visible"/>

    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/bannerUnitId" />

</LinearLayout>