<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.JobDetailsActivity">

    <include layout="@layout/lyt_toolbar" />

    <TextView
        android:id="@+id/jobsTitleTVId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:text="@string/job_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="2dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/companyNameId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/company_name"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:background="@color/gray" />

    </LinearLayout>

    <WebView
        android:id="@+id/jobDescriptionWVId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:backgroundTint="@android:color/transparent"
        android:textAlignment="gravity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/jobsExpiryDateTVId"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="10dp"
            android:text="@string/expiryDate"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/jobsPhotoButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:focusable="true"
            android:text="@string/viewPhotos"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/jobsApplyButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_color"
        android:focusable="true"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/bannerUnitId" />

</LinearLayout>