<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.BlogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <include layout="@layout/lyt_toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewId"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf">

            <ImageButton
                android:id="@+id/previousJobsDetailsButtonId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:src="@drawable/ic_baseline_previous"
                android:visibility="gone" />

            <Button
                android:id="@+id/firstJobsDetailsButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_bg"
                android:text="@string/first_page"
                android:visibility="gone" />

            <Button
                android:id="@+id/middleJobsDetailsButtonId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_bg"
                android:text="@string/first_page"
                android:visibility="gone" />

            <Button
                android:id="@+id/lastJobsDetailsButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_bg"
                android:text="@string/last_page"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/nextJobsDetailsButtonId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:src="@drawable/ic_baseline_next"
                android:visibility="gone" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/bannerUnitId" />
    </LinearLayout>

</FrameLayout>