<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.BlogDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <include layout="@layout/lyt_toolbar" />

        <TextView
            android:id="@+id/blogTitleTVId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:paddingStart="10dp"
            android:text="@string/job_title"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:background="@color/gray" />

        <WebView
            android:id="@+id/blogDescriptionWVId"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:textAlignment="gravity" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/bannerUnitId" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_marginBottom="100dp"
        android:scaleType="fitXY"
        app:maxImageSize="35dp"
        android:text="View Photo"
        android:backgroundTint="@color/black"
        android:src="@drawable/ic_baseline_photo"
        android:layout_gravity="bottom|center"
        android:id="@+id/floatingActionButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        tools:ignore="HardcodedText" />

</FrameLayout>